[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pixelle-video"
version = "0.1.0"
description = "A fork of AIDC-AI/Pixelle-Video — high-quality video generation and processing toolkit"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["video", "generation", "diffusion", "ai", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.40.0",
    "diffusers>=0.27.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.20.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "av>=11.0.0",
    "decord>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]
train = [
    "deepspeed>=0.12.0",
    "wandb>=0.16.0",
    "tensorboard>=2.14.0",
    "datasets>=2.14.0",
]

[project.urls]
Homepage = "https://github.com/your-org/pixelle-video"
Repository = "https://github.com/your-org/pixelle-video"
Documentation = "https://your-org.github.io/pixelle-video"
Issues = "https://github.com/your-org/pixelle-video/issues"

[project.scripts]
pixelle-video = "pixelle_video.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88  # personal preference: use black's default instead of 120
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88  # keep in sync with black

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=pixelle_video --cov-report=term-missing"
